--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -27977,7 +27977,7 @@ above.
 @end deftypefun
 
 
-@deftypefun {gal_data_t *} gal_statistics_outlier_positive (gal_data_t @code{*input}, float @code{sigma}, float @code{sigclip_multip}, float @code{sigclip_param}, int @code{inplace}, int @code{quiet})
+@deftypefun {gal_data_t *} gal_statistics_outlier_positive (gal_data_t @code{*input}, size_t @code{window_size}, float @code{sigma}, float @code{sigclip_multip}, float @code{sigclip_param}, int @code{inplace}, int @code{quiet})
 Find the first positive outlier in the @code{input} distribution. The
 returned dataset contains a single element: the first positive outlier. It
 is one of the dataset's elements, in the same type as the input. If the
@@ -27985,23 +27985,22 @@ process fails for any reason (for example no outlier was found), a
 @code{NULL} pointer will be returned.
 
 All (possibly existing) blank elements are first removed from the input
-dataset, then it is sorted. A sliding window equal to half the width of the
-dataset elements is parsed over the dataset. Starting from the middle of
-the dataset (median) in the direction of increasing values. This window is
-used as a reference. The first element where the distance to the previous
+dataset, then it is sorted. A sliding window of @code{window_size} elements
+is parsed over the dataset. Starting from the @code{window_size}-th element
+of the dataset, in the direction of increasing values. This window is used
+as a reference. The first element where the distance to the previous
 (sorted) element is @code{sigma} units away from the distribution of
 distances in its window is considered an outlier and returned by this
 function.
 
 Formally, if we assume there are @mymath{N} non-blank elements. They are
-first sorted. Searching for the outlier starts on element @mymath{N/2}
-(integer division). Let's take @mymath{v_i} to be the @mymath{i}-th element
-of the sorted input (with no blank values) and @mymath{m} and
-@mymath{\sigma} as the @mymath{\sigma}-clipped median and standard
-deviation from the distances of the previous @mymath{N/2} elements (not
-including @mymath{v_i}). If the value given to @code{sigma} is displayed
-with @mymath{s}, the @mymath{i}-th element is considered as an outlier when
-the condition below is true.
+first sorted. Searching for the outlier starts on element @mymath{W}. Let's
+take @mymath{v_i} to be the @mymath{i}-th element of the sorted input (with
+no blank values) and @mymath{m} and @mymath{\sigma} as the
+@mymath{\sigma}-clipped median and standard deviation from the distances of
+the previous @mymath{W} elements (not including @mymath{v_i}). If the value
+given to @code{sigma} is displayed with @mymath{s}, the @mymath{i}-th
+element is considered as an outlier when the condition below is true.
 
 @dispmath{{(v_i-v_{i-1})-m\over \sigma}>s}
 
@@ -28017,10 +28016,13 @@ done within the input dataset's allocated space. Otherwise, this function
 will internally allocate (and later free) the necessary space to keep the
 intermediate space that this process requires.
 
-If @code{quiet!=0}, this function will report a warning when the moving
-window size is not much smaller than the number of non-blank elements. In
-such cases, the outlier estimation may be wrong: the outlier point may lie
-before the first checked element.
+If @code{quiet!=0}, this function will report the parameters every time it
+moves the window as a separate line with several columns. The first column
+is the value, the second (in square brackets) is the sorted index, the
+third is the distance of this element from the previous one. The Fourth and
+fifth (in parenthesis) are the median and standard deviation of the
+sigma-clipped distribution within the window and the last column is the
+difference between the third and fourth, divided by the fifth.
 
 @end deftypefun
 
