Annum as unit of year in abbreviated CosmicCalculator units
Until now, we were simply using the non-standard "Gyr" for representing
billion years. However, the official IAU-recognized abbreviation for year
is "a" (for annum), and it is widely used in other scientific branches like
geology, palaeontology, etc. The IAU published units are available here:
https://www.iau.org/publications/proceedings_rules/units/

Therefore with this commit, all mentions of "Gyr" in CosmicCalculator were
corrected to "Ga". A short explanation is also added for those that may not
be familiar with this standard: In the output of `--help', it is written as
"Ga: Giga Annum". In the output with all measurements it is written as
(Ga*), with the star pointing to a footnote in the end. And finally, in the
book its written as "Ga (Giga annum, or billion years)".

This issue was raised up by David Valls-Gabaud.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -21629,8 +21629,8 @@ option which has the units along with a short description.
 
 @item -G
 @itemx --agenow
-The current age of the universe (given the input parameters) in Giga-years
-(Gyr).
+The current age of the universe (given the input parameters) in Ga (Giga
+annum, or billion years).
 
 @item -C
 @itemx --criticaldensitynow
@@ -21673,14 +21673,14 @@ the apparent magnitude to give the object's absolute magnitude.
 
 @item -g
 @itemx --age
-Age of the universe at given redshift in Giga-years (Gyr).
+Age of the universe at given redshift in Ga (Giga annum, or billion years).
 
 @item -b
 @itemx --lookbacktime
-The look-back time to given redshift in Giga-years (Gyr). The look-back
-time at a given redshift is defined as the current age of the universe
-(@option{--agenow}) subtracted by the age of the universe at the given
-redshift.
+The look-back time to given redshift in Ga (Giga annum, or billion
+years). The look-back time at a given redshift is defined as the current
+age of the universe (@option{--agenow}) subtracted by the age of the
+universe at the given redshift.
 
 @item -c
 @itemx --criticaldensity
